--- a/assets/sass/components/_form.scss
+++ b/assets/sass/components/_form.scss
@@ -1,5 +1,5 @@
 ///
-/// Forty by HTML5 UP
+/// Paradigm Shift by HTML5 UP
 /// html5up.net | @ajlkn
 /// Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 ///
@@ -14,18 +14,22 @@
 		}
 
 		> .fields  {
-			$gutter: (_size(element-margin) * 0.75);
+			$gutter: _size(form-gutter);
 
 			@include vendor('display', 'flex');
 			@include vendor('flex-wrap', 'wrap');
-			width: calc(100% + #{$gutter * 2});
 			margin: ($gutter * -1) 0 _size(element-margin) ($gutter * -1);
+			width: calc(100% + #{$gutter * 2});
 
 			> .field {
 				@include vendor('flex-grow', '0');
 				@include vendor('flex-shrink', '0');
 				padding: $gutter 0 0 $gutter;
 				width: calc(100% - #{$gutter * 1});
+
+				> :last-child {
+					margin-bottom: 0;
+				}
 
 				&.half {
 					width: calc(50% - #{$gutter * 0.5});
@@ -45,8 +49,8 @@
 			> .fields {
 				$gutter: (_size(element-margin) * 0.75);
 
-				width: calc(100% + #{$gutter * 2});
 				margin: ($gutter * -1) 0 _size(element-margin) ($gutter * -1);
+				width: calc(100% + #{$gutter * 2});
 
 				> .field {
 					padding: $gutter 0 0 $gutter;
@@ -68,16 +72,6 @@
 		}
 	}
 
-	label {
-		color: _palette(fg-bold);
-		display: block;
-		font-size: 0.8em;
-		font-weight: _font(weight-bold);
-		letter-spacing: _font(letter-spacing-alt);
-		margin: 0 0 (_size(element-margin) * 0.5) 0;
-		text-transform: uppercase;
-	}
-
 	input[type="text"],
 	input[type="password"],
 	input[type="email"],
@@ -87,13 +81,12 @@
 	select,
 	textarea {
 		@include vendor('appearance', 'none');
-		background: _palette(border-bg);
-		border: none;
-		border-radius: 0;
+		border-radius: _size(border-radius);
+		border: solid 2px _palette(border);
 		color: inherit;
 		display: block;
 		outline: 0;
-		padding: 0 1em;
+		padding: 0 1rem;
 		text-decoration: none;
 		width: 100%;
 
@@ -102,23 +95,43 @@
 		}
 
 		&:focus {
-			border-color: _palette(highlight);
-			box-shadow: 0 0 0 2px _palette(highlight);
+			border-color: _palette(accent-alt);
 		}
+	}
+
+	label {
+		color: _palette(fg-bold);
+		display: block;
+		font-family: _font(family-heading);
+		font-size: 0.75rem;
+		font-weight: _font(weight-heading-light);
+		letter-spacing: _font(kerning-heading);
+		line-height: 1.75;
+		margin: 0 0 (_size(element-margin) * 0.5) 0;
+		text-transform: uppercase;
+	}
+
+	input[type="text"],
+	input[type="password"],
+	input[type="email"],
+	input[type="tel"],
+	input[type="search"],
+	input[type="url"] {
+		height: _size(element-height);
 	}
 
 	select {
 		background-image: svg-url("<svg xmlns='http://www.w3.org/2000/svg' width='40' height='40' preserveAspectRatio='none' viewBox='0 0 40 40'><path d='M9.4,12.3l10.4,10.4l10.4-10.4c0.2-0.2,0.5-0.4,0.9-0.4c0.3,0,0.6,0.1,0.9,0.4l3.3,3.3c0.2,0.2,0.4,0.5,0.4,0.9 c0,0.4-0.1,0.6-0.4,0.9L20.7,31.9c-0.2,0.2-0.5,0.4-0.9,0.4c-0.3,0-0.6-0.1-0.9-0.4L4.3,17.3c-0.2-0.2-0.4-0.5-0.4-0.9 c0-0.4,0.1-0.6,0.4-0.9l3.3-3.3c0.2-0.2,0.5-0.4,0.9-0.4S9.1,12.1,9.4,12.3z' fill='#{_palette(border)}' /></svg>");
-		background-size: 1.25rem;
-		background-repeat: no-repeat;
 		background-position: calc(100% - 1rem) center;
+		background-repeat: no-repeat;
+		background-size: 1.25rem;
 		height: _size(element-height);
 		padding-right: _size(element-height);
 		text-overflow: ellipsis;
 
 		option {
-			color: _palette(fg-bold);
-			background: _palette(bg);
+			background-color: _palette(bg);
+			color: _palette(fg);
 		}
 
 		&:focus {
@@ -132,18 +145,8 @@
 		}
 	}
 
-	input[type="text"],
-	input[type="password"],
-	input[type="email"],
-	input[type="tel"],
-	input[type="search"],
-	input[type="url"],
-	select {
-		height: _size(element-height);
-	}
-
 	textarea {
-		padding: 0.75em 1em;
+		padding: 0.75rem 1rem;
 	}
 
 	input[type="checkbox"],
@@ -151,9 +154,9 @@
 		@include vendor('appearance', 'none');
 		display: block;
 		float: left;
-		margin-right: -2em;
+		margin-right: -2rem;
 		opacity: 0;
-		width: 1em;
+		width: 1rem;
 		z-index: -1;
 
 		& + label {
@@ -161,39 +164,44 @@
 			color: _palette(fg);
 			cursor: pointer;
 			display: inline-block;
+			font-family: _font(family);
+			font-size: 1rem;
 			font-weight: _font(weight);
-			padding-left: (_size(element-height) * 0.6) + 1em;
-			padding-right: 0.75em;
+			letter-spacing: _font(kerning);
+			padding-left: (_size(element-height) * 0.6) + 0.875rem;
+			padding-right: 0.875rem;
 			position: relative;
+			text-transform: none;
 
 			&:before {
-				background: _palette(border-bg);
+				border-radius: _size(border-radius);
+				border: solid 2px _palette(border);
 				content: '';
 				display: inline-block;
-				font-size: 0.8em;
+				font-size: 0.8rem;
 				height: (_size(element-height) * 0.75);
 				left: 0;
-				letter-spacing: 0;
 				line-height: (_size(element-height) * 0.75);
 				position: absolute;
 				text-align: center;
-				top: 0;
+				top: (_size(element-height) * -0.05);
 				width: (_size(element-height) * 0.75);
 			}
 		}
 
 		&:checked + label {
 			&:before {
-				background: _palette(fg-bold);
-				border-color: _palette(highlight);
 				content: '\f00c';
+				background-color: _palette(accent);
+				border-color: _palette(accent);
 				color: _palette(bg);
 			}
 		}
 
 		&:focus + label {
 			&:before {
-				box-shadow: 0 0 0 2px _palette(highlight);
+				border-color: _palette(accent);
+				box-shadow: 0 0 0 1px _palette(accent);
 			}
 		}
 	}
@@ -201,6 +209,7 @@
 	input[type="checkbox"] {
 		& + label {
 			&:before {
+				border-radius: _size(border-radius);
 			}
 		}
 	}
@@ -214,21 +223,47 @@
 	}
 
 	::-webkit-input-placeholder {
-		color: _palette(fg-light) !important;
 		opacity: 1.0;
+		color: _palette(fg-light) !important;
 	}
 
 	:-moz-placeholder {
-		color: _palette(fg-light) !important;
 		opacity: 1.0;
+		color: _palette(fg-light) !important;
 	}
 
 	::-moz-placeholder {
-		color: _palette(fg-light) !important;
 		opacity: 1.0;
+		color: _palette(fg-light) !important;
 	}
 
 	:-ms-input-placeholder {
-		color: _palette(fg-light) !important;
 		opacity: 1.0;
+		color: _palette(fg-light) !important;
+	}
+
+	@include breakpoint('<=small') {
+		label {
+			font-size: 0.675rem;
+		}
+
+		input[type="checkbox"],
+		input[type="radio"] {
+			& + label {
+				font-size: 1rem;
+			}
+		}
+	}
+
+	@include breakpoint('<=xxsmall') {
+		label {
+			font-size: 0.675rem;
+		}
+
+		input[type="checkbox"],
+		input[type="radio"] {
+			& + label {
+				font-size: 1rem;
+			}
+		}
 	}
