--- a/assets/sass/components/_row.scss
+++ b/assets/sass/components/_row.scss
@@ -1,5 +1,5 @@
 ///
-/// Forty by HTML5 UP
+/// Paradigm Shift by HTML5 UP
 /// html5up.net | @ajlkn
 /// Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 ///
@@ -7,25 +7,25 @@
 /* Row */
 
 	.row {
-		@include html-grid(2em);
+		@include html-grid(2rem);
 
 		@include breakpoint('<=xlarge') {
-			@include html-grid(2em, 'xlarge');
+			@include html-grid(2rem, 'xlarge');
 		}
 
 		@include breakpoint('<=large') {
-			@include html-grid(1.5em, 'large');
+			@include html-grid(1.5rem, 'large');
 		}
 
 		@include breakpoint('<=medium') {
-			@include html-grid(1.5em, 'medium');
+			@include html-grid(1.5rem, 'medium');
 		}
 
 		@include breakpoint('<=small') {
-			@include html-grid(1.25em, 'small');
+			@include html-grid(1.25rem, 'small');
 		}
 
 		@include breakpoint('<=xsmall') {
-			@include html-grid(1.25em, 'xsmall');
+			@include html-grid(1.25rem, 'xsmall');
 		}
 	}
