--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -5,10 +5,10 @@
 @import 'libs/breakpoints';
 @import 'libs/html-grid';
 @import 'fontawesome-all.min.css';
-@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300italic,600,600italic');
+@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,600,700,300i,600i,700i|Raleway:600,800');
 
 /*
-	Forty by HTML5 UP
+	Paradigm Shift by HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
@@ -16,29 +16,14 @@
 // Breakpoints.
 
 	@include breakpoints((
-		xlarge:    (1281px,   1680px   ),
-		large:     (981px,    1280px   ),
-		medium:    (737px,    980px    ),
+		default:   (1681px,   null     ),
+		xlarge:    (1281px,   1920px   ),
+		large:     (1153px,   1280px   ),
+		medium:    (737px,    1152px   ),
 		small:     (481px,    736px    ),
 		xsmall:    (361px,    480px    ),
 		xxsmall:   (null,     360px    )
 	));
-
-// Mixins.
-
-	@mixin inner {
-		> .inner {
-			@include padding(4em, 0);
-			margin: 0 auto;
-			max-width: _size(inner);
-			width: calc(100% - 6em);
-
-			@include breakpoint('<=small') {
-				@include padding(3em, 0);
-				width: calc(100% - 3em);
-			}
-		}
-	}
 
 // Base.
 
@@ -49,27 +34,19 @@
 // Component.
 
 	@import 'components/row';
-	@import 'components/section';
-	@import 'components/form';
 	@import 'components/box';
+	@import 'components/button';
+	@import 'components/form';
 	@import 'components/icon';
 	@import 'components/image';
 	@import 'components/list';
 	@import 'components/actions';
 	@import 'components/icons';
-	@import 'components/pagination';
 	@import 'components/table';
-	@import 'components/button';
-	@import 'components/tiles';
-	@import 'components/contact-method';
-	@import 'components/spotlights';
+	@import 'components/arrow';
+	@import 'components/gallery';
+	@import 'components/feature-icons';
 
 // Layout.
 
-	@import 'layout/header';
-	@import 'layout/banner';
-	@import 'layout/main';
-	@import 'layout/contact';
-	@import 'layout/footer';
 	@import 'layout/wrapper';
-	@import 'layout/menu';
